--- a/NgocShop.Web/Views/Admin/Index.cshtml
+++ b/NgocShop.Web/Views/Admin/Index.cshtml
@@ -14,6 +14,8 @@
 </head>
 <body>
     <div ng-controller="schoolController">
+        <div ngoc-shop-directive></div>
+        <ngoc-shop-directive></ngoc-shop-directive>
         <input type="number" ng-model="num" /> Value of TextBox : {{num}}
         <button ng-click="checkNumber()">Click me</button>
         {{message}}
