--- a/NgocShop.Web/Views/Admin/Index.cshtml
+++ b/NgocShop.Web/Views/Admin/Index.cshtml
@@ -534,6 +534,7 @@
     <script src="~/Assets/admin/libs/angular-ui-router.js"></script>
 
     <script src="~/app/shared/modules/ngocshop.common.js"></script>
+    <script src="~/app/shared/filters/statusFilter.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
